<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        tools:text="@string/text_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_author"
        tools:text="@string/test_review"/>
    <TextView
        android:id="@+id/tv_readMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/review_readMore"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/tv_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <ImageView
        android:id="@+id/imageView_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_readMore"
        app:srcCompat="@android:color/background_dark" />
</androidx.constraintlayout.widget.ConstraintLayout>
