<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetails">

    <ImageView
        android:id="@+id/tv_detail_thumbnail_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="330dp">

                <ImageView
                    android:id="@+id/tv_detail_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />

                <!-- make visible if there is no image -->
                <ImageView
                    android:id="@+id/tv_detail_insertImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/insert_photo"
                    android:background="@color/colorDivider"
                    android:visibility="invisible"/>

            </androidx.cardview.widget.CardView>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <Button
                    android:id="@+id/tv_markFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="38dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorAccent"
                    android:onClick="markMovieAsFavorite" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    style="@style/textPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />

                <TextView
                    style="@style/textPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_ratings"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_ratings"
                    style="@style/textPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />

                <TextView
                    style="@style/textPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_releaseDate"
                    style="@style/textPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />

                <TextView
                    style="@style/textPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_description"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_description"
                    style="@style/textPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textPadding"
                    android:textColor="@color/colorPrimaryText"
                    android:text="Trailers"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tv_recyclerview_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>